--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,7 +21,7 @@
           <nav class="nav nav-masthead justify-content-center float-md-end">
             <a href="#" class="nav-link active">Home</a>
             <a href="/campgrounds" class="nav-link">Campgrounds</a>
-            <% if(!currentUser){ %>
+            <% if(currentUser===undefined){ %>
             <a href="/login" class="nav-link">Login</a>
             <a href="/register" class="nav-link">Register</a>
             <% }else{ %>
