--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -25,7 +25,7 @@
         </li>
       </ul>
       <div class="navbar-nav ms-auto">
-        <% if(!currentUser) {%>
+        <% if(currentUser===undefined) {%>
         <a class="nav-link" href="/login">Login</a>
         <a class="nav-link" href="/register">Register</a>
         <% } else{ %>
